--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "swr": "^0.3.2"
+    "swr": "^0.3.2",
+    "tailwindcss": "^1.8.10"
   }
 }
