--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^0.2.0",
+    "framer-motion": "^2.9.4",
     "next": "^10.0.0",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
