--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^0.2.0",
-    "framer-motion": "^2.9.4",
-    "next": "^10.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "swr": "^0.3.2",
-    "tailwindcss": "^1.8.10"
+    "@headlessui/react": "^0.3.1",
+    "autoprefixer": "^10.2.4",
+    "framer-motion": "^3.9.2",
+    "next": "^10.0.7",
+    "postcss": "^8.2.6",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "swr": "^0.4.2",
+    "tailwindcss": "^2.0.3"
   }
 }
