--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.2.4",
     "framer-motion": "^3.9.2",
-    "next": "^10.0.7",
-    "postcss": "^8.2.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "swr": "^0.4.2",
-    "tailwindcss": "^2.0.3"
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^0.4.2"
+  },
+  "devDependencies": {
+    "@types/node": "18.8.2",
+    "@types/react": "18.0.21",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.4"
   }
 }
