--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^0.4.2"
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
